Fix menu layout bug
Fix menu layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ nav{
   margin-left: 10px;
 }
 .menu-item {
-  padding-left: 1rem;
+  padding-left: 0.4rem;
   text-align: center;
 }
 @media (max-width: 48rem) {
@@ -72,7 +72,8 @@ nav{
   text-decoration: none;
 }
 .menu-active a {
-  text-decoration: underline;
+  color: black;
+  text-decoration: none;
 }
 #head {
 }
